--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
             "role": "Developer"
         }
     ],
+    "require": {
+        "php": ">=5.6.0"
+    },
     "scripts": {
         "compile": [
             "chmod -R 777 ./"
