--- a/package.json
+++ b/package.json
@@ -1,29 +1,13 @@
 {
-  "name": "bitmex-realtime-api",
-  "version": "0.4.0",
-  "description": "A library for interacting with BitMEX's websocket API.",
-  "main": "library/bitmex-api/api-connectors/official-ws/nodejs/example.js",
-  "repository": "https://github.com/BitMEX/api-connectors.git",
-  "engines": {
-    "node": ">=4"
-  },
+  "name": "temp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node library/bitmex-api/api-connectors/official-ws/nodejs/example.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "bitmex",
-    "bitcoin",
-    "websocket",
-    "api"
-  ],
-  "author": "Samuel Reed <samuel.trace.reed@gmail.com> (http://strml.net/)",
-  "license": "MIT",
-  "dependencies": {
-    "debug": "^3.1.0",
-    "eventemitter2": "^5.0.1",
-    "lodash": "^4.17.10",
-    "superagent": "^3.8.3",
-    "ws": "^6.0.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
